# Synora-Pyrolysis

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/dashboard/: app.py  reactor_3d_component.py
data/processed/physics_runs/: al_smoke.parquet  al_smoke_params.json  pfr_dataset_20260213T113801Z_9x14.parquet  pfr_dataset_20260213T121737Z_3x3.parquet  pfr_dataset_20260221T082455Z_9x14.parquet  pfr_dataset_20260620T162446Z_9x14.parquet  surrogate_params.json
docs/: context.md
docs/agent/: ACCEPTANCE_TESTS.md  ARCHITECTURE.md  CONTEXT.md  DATA_SOURCES.md  DECISIONS.md  PROMPTS.md  ROADMAP.md
docs/datasets/: mechanisms.md  physics_generated.md
scripts/experimental/: clean_cv_reactor.py
scripts/physics/: generate_pfr_dataset.py
src/synora/: __init__.py
src/synora.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/synora/calibration/: __init__.py  surrogate_fit.py
src/synora/economics/: __init__.py  lcoh.py
src/synora/generative/: __init__.py  active_learning.py  constraints.py  design_space.py  multizone.py  objectives.py  optimizer.py  report.py
src/synora/physics/: __init__.py  dataset_cli.py  label_pfr.py
src/synora/reactor/: __init__.py  (+1 more)
tests/: test_active_learning.py  test_calibration.py  test_constraints.py  test_dashboard_helpers.py  test_economics.py  test_generative.py  test_imports.py  test_multizone.py  test_reactor.py  test_report.py  test_simulator.py  test_validation.py
(+5 files in other folders)
