[project]
name = "synora"
version = "0.1.0"
description = "Digital twin + optimization platform for distributed methane pyrolysis hydrogen networks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "streamlit",
  "plotly",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
synora-generate-pfr = "synora.physics.dataset_cli:main"
synora-calibrate = "synora.calibration.surrogate_fit:main"

[project.optional-dependencies]
physics = [
  "cantera>=3.2",
]
dev = [
  "pytest>=8",
  "ruff>=0.15,<0.16",
  "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]